Use Files api instead of loading resource as stream